creato metodo post per creare un nuovo progetto + creato metodo get per cercare progetti (da correggere)